# hh_API_request

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py
src/: AbcClass.py  ApiKey.py  abstract.py  funs.py  json_saver.py  src.py  utils.py  vacancy.py
test/: test_api.py  test_json.py
