[tool.poetry]
name = "hh-api-request"
version = "0.1.0"
description = ""
authors = ["SerKRI <SK@main.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
configdict = "^2.10.0"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

